fix(WorkItem): Modal outline removed on mobile

--- a/src/components/2-Molecules/WorkItem/WorkItem.scss
+++ b/src/components/2-Molecules/WorkItem/WorkItem.scss
@@ -31,6 +31,7 @@
   max-height: $work-modal-width;
   max-width: $work-modal-width;
   margin: 0 auto;
+  outline: none;
 }
 
 .WorkItem__title {
